[FIX] #558 fix checkstyle, test