@@ -1,6 +1,7 @@
 package gg.recruit.api.user.application.service.response;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import gg.data.recruit.application.Application;
 import lombok.Getter;
@@ -10,6 +11,7 @@ public class ApplicationListDto {
 	List<ApplicationDto> applications;
 
 	public ApplicationListDto(List<Application> applications) {
-		this.applications = applications.stream().map(ApplicationDto::new).toList();
+		this.applications = applications.stream().map(ApplicationDto::new)
+			.collect(Collectors.toList());
 	}
 }
